--- a/TaskApp/src/main/resources/application.properties
+++ b/TaskApp/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/TaskDatabase
+spring.datasource.username=postgres
+spring.datasource.password=Yash@1996
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
